<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:layout_weight="0"
        android:text="@string/dialogintro" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_weight="0"
        android:text="@string/usernamelabel" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/hint_username"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="7dp"
        android:layout_weight="0"
        android:text="@string/passwordlabel" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/hint_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="7dp"
            android:text="@android:string/cancel" />
        
        <Button
            android:id="@+id/okbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:text="@android:string/ok" />

    </LinearLayout>

</LinearLayout>